# Projeto-Final-PI-2025

./: .dockerignore  Dockerfile  Projeto-Final-PI-2025.code-workspace  PyProject.toml  README.md  compose.yml  db.sqlite3  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  tests.yml
compose/django/: start
main/: settings.py  urls.py
templates/: base.html
tests/: hello.sh  test_models.py  test_views.py
usuarios/: forms.py  models.py  urls.py  views.py
usuarios/migrations/: 0003_cliente_login_usuario_controles_consoles_outros_and_more.py
usuarios/templates/usuarios/: dashboard.html  perfil.html
workapp/main/: settings.py  urls.py
workapp/templates/: base.html  clientes.html  servicos_base.html
workapp/templates/modals/: novo_cliente_modal.html  novo_servico_modal.html
workapp/usuarios/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
workapp/usuarios/migrations/: 0001_initial.py  0002_alter_cliente_user.py  0004_remove_controles_detalhes_orcamento_and_more.py  0005_alter_pedidos_options.py  0006_pedidos_status_notificacao.py
workapp/usuarios/templates/usuarios/: adicionar_pedido.html  cadastrar.html  dashboard.html  gerenciar_pedido.html  listar_pedidos.html  login.html  notificacoes.html  perfil.html  registro_consoles.html  registro_controles.html  registro_outros.html
