[project]
name = "PFPI-demo"
version = "0.1.0"
description = "demonstração do projeto final"
readme = "README.md"

[[project.authors]]
name = "Kleber Ferreira"
email = "kleberf778147@gmail.com"

[project.urls]
Homepage = "https://github.com/CarlaReginaDev/Projeto-Final-PI-2025"
Repository = "https://github.com/CarlaReginaDev/Projeto-Final-PI-2025"
"Bug Tracker" = "https://github.com/CarlaReginaDev/Projeto-Final-PI-2025/issues"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "workapp.main.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = ["--tb=short", "--strict-markers", "--disable-warnings"]
markers = [
    "slow: slow running tests",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["workapp/usuarios"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[project.optional-dependencies]
prod = [ 
    "asgiref==3.9.2", 
    "Django==5.2.6", 
    "dotenv==0.9.9", 
    "pillow==11.3.0", 
    "psycopg2-binary==2.9.11", 
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2"
]
dev = [ 
    "asgiref==3.9.2", 
    "Django==5.2.6", 
    "dotenv==0.9.9", 
    "pillow==11.3.0", 
    "psycopg2-binary==2.9.11", 
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "pytest",
    "pytest-cov",
    "black",
    "flake8"
]
test = [ 
    "asgiref==3.9.2", 
    "Django==5.2.6", 
    "dotenv==0.9.9", 
    "pillow==11.3.0", 
    "psycopg2-binary==2.9.11", 
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "pytest",
    "pytest-cov",
    "pytest-django"
]
lint = [ 
    "asgiref==3.9.2", 
    "Django==5.2.6", 
    "dotenv==0.9.9", 
    "pillow==11.3.0", 
    "psycopg2-binary==2.9.11", 
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "black",
    "flake8"
]
